# swxApp

./: .gitignore  CMakeLists.txt  README.md  acercadedialog.cpp  acercadedialog.hpp  acercadedialog.ui  appIcon.rc  categorydialog.cpp  categorydialog.hpp  categorydialog.ui  changepwddialog.cpp  changepwddialog.hpp  changepwddialog.ui  configdialog.cpp  configdialog.hpp  configdialog.ui  dlgnewcategory.cpp  dlgnewcategory.hpp  dlgnewcategory.ui  logindialog.cpp  logindialog.hpp  logindialog.ui  main.cpp  mainform.cpp  mainform.hpp  mainform.ui  maintenanceurldialog.cpp  maintenanceurldialog.hpp  maintenanceurldialog.ui  midlewidget.cpp  midlewidget.hpp  midlewidget.ui  publicurldialog.cpp  publicurldialog.hpp  publicurldialog.ui  resetpassworddialog.cpp  resetpassworddialog.hpp  resetpassworddialog.ui  rsc.qrc
cmake/: ExternalLibraries.cmake
database/: seed.sql
helperdatabase/: helperdb.cpp  helperdb.hpp
include/openssl/: opensslv.h
lib/cmake/QXlsxQt6/: QXlsxQt6Config.cmake  QXlsxQt6ConfigVersion.cmake  QXlsxQt6Targets-release.cmake  QXlsxQt6Targets.cmake
licencia/: gnu-gpl-v3-license.html  licencia.txt
swwidgets/: switemdelegate.cpp  switemdelegate.hpp  swlabel.cpp  swlabel.hpp  swtablemodel.cpp  swtablemodel.hpp  swtextedit.cpp  swtextedit.hpp
util/: excelexporter.cpp  excelexporter.hpp  helper.cpp  helper.hpp  systemthemewatcher.cpp  systemthemewatcher.hpp
